# cg-projects

./: CMakeLists template.txt  README template.md  license.cpp
gears/: Makefile  assignment.md  gears
hw0/: answers.txt
hw1/: answers.txt  gears.c  questions.txt
hw2/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README  answers.txt  hw2.cpp  lorenz.c  questions.txt
lighting/: answers.txt  assignment.md  assignment.txt
lorenzAttractor/: .gitignore  CMakeLists.txt  Makefile  README.md  assignment.md  hw2.cpp  lorenzAttractor.cpp  prepare.sh
objectsIn3D/: .gitignore  Makefile  README.md  answers.txt  assignment.md  assignment.txt  objectsIn3D.cpp  prepare.sh
project/: .gitignore  assignment.md  proposal.tex
projections/: .gitignore  Makefile  README.md  answers.txt  assignment.md  assignment.txt  prepare.sh  projections.cpp
textures/: Makefile  answers.txt  assignment.md  assignment.txt  prepare.sh
whoami/: assignment.md  questions.txt
